GC's improvement